# geokit

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  _config.yml  _toc.yml  conf.py  contributors.txt  example_centroid_df.dbf  example_centroid_df.shp  example_centroid_df.shx  example_file_df.dbf  example_file_df.shp  example_file_df.shx  outputGeoPackage.gpkg  outputShapeFile.dbf  outputShapeFile.shp  outputShapeFile.shx  pyproject.toml  requirements-dev.yml  requirements.yml  rm_raster.tif  ruff.toml  setup.py
Examples/: README.md  RegionMask.ipynb  dataframe_to_shapefile.ipynb  example_01_srs.ipynb  example_01_srs.py  example_02_geometry.ipynb  example_03_vector.ipynb  example_04_raster.ipynb  example_05_Extent.ipynb  example_06_RegionMask.ipynb  example_07_GeographyHandling.ipynb  execute_all_notebooks.py  geokit_workshop.ipynb  geokit_workshop_01_srs.ipynb  regional_raster_average.ipynb  rm_raster.tif  test_raster_with_ext.tif
GTools/: __init__.py  algorithms.py  extent.py  rasterUtil.py  regionMask.py  util.py  vectorUtil.py
apps/: .gitignore
data/: Europe_with_H2MobilityData_GermanyClip.shp  FJI.shp  LuxLines.shx  LuxShape.dbf  LuxShape.shp  aachen_zones.dbf  boxes.shx  clc-aachen_clipped-unflipped.tif  divided_raster_1.tif  gadm36_DEU_1.shx  multiFeature.dbf  multiFeature.shx  osm_roads_minor.9.264.171.tif  osm_roads_minor.9.264.172.tif
docs/: .readthedocs.yaml  FAQ.md  Introduction.md  Makefile  _config.yaml  _config.yml  _toc.yml  conf.py  contents.md  (+3 more)
(+201 files in other folders)
