[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geokit"
version = "1.5.0"
description = "Geokit is a library that interfaces with GDAL to support general-purpose geospatial data analysis."
authors = [
  { name = "David Severin Ryberg" },
  { name = "Christoph Winkler", email = "c.winkler@fz-juelich.de" },
  { name = "Ishmam Shitab", email = "s.ishmam@fz-juelich.de" },
  { name = "Julian Belina", email = "j.belina@fz-juelich.de" },
]
maintainers = [{ name = "Julian Belina", email = "j.belina@fz-juelich.de" }]
license = { file = "LICENSE.txt" }
readme = "README.md"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.*"]

#Configureation options
# https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options

[tool.pytest.ini_options]
testpaths = ["test"] # Sets the path where to look for tests
pythonpath = [
  "test",
] # Sets the path which should be prepended to pythonpath relative to the root folder
console_output_style = "count"
typeguard-packages = """
geokit"""
typeguard-debug-instrumentation = true
typeguard-forward-ref-policy = "ERROR"
typeguard-collection-check-strategy = "ALL_ITEMS"
